syntax = "proto3";

package pb;



message CurrentInfo {
    string user_id =1;
    string trace_id =2;
}
